project description positioning

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,72 +62,111 @@
 
 <li class="project-card">
   <a href="#1" class="project-card-link link">
-    <img class="project-img" src="./images/portfolio/technokryak-1.jpg" alt="Ноутбук" width="370"
+    <div class="project-img">
+    <img  src="./images/portfolio/technokryak-1.jpg" alt="Ноутбук" width="370"
   height="294"/>
+  <p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+  </div>
+
      <div class="project-desc"><h2 class="project-title secondary-title"> Технокряк </h2>
          <p class="project-type"> Веб-сайт</p></div></a>
       </li>
 
 <li class="project-card">
   <a href="#2" class="project-card-link link">
+    <div class="project-img">
     <img  class="project-img" src="./images/portfolio/poster-2.jpg" alt="Два человека играют в баскетбол " width="370"
   height="294"/>
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
       <div class="project-desc"><h2 class="project-title secondary-title">Постер <span lang="en"> Orlean vs Golden Star</span></h2>
         <p class="project-type">Дизайн </p></div></a>
       </li>
 
 <li class="project-card">
   <a href="#3" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/seafood-3.jpg" alt="Лого ресторана" width="370"
   height="294"/>
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+  это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
       <div class="project-desc"><h2 class="project-title secondary-title">Ресторан <span lang="en">Seafood</span></h2>
         <p class="project-type">Приложение </p></div></a>
       </li>
 
 <li class="project-card">
   <a href="#4" class="project-card-link link">
+    <div class="project-img">
     <img  class="project-img" src="./images/portfolio/prime-4.jpg" alt="Наушники" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
       <div class="project-desc"><h2 class="project-title secondary-title">Проект <span lang="en">Prime</span></h2>
          <p class="project-type">Маркетинг </p></div></a>
         </li>
 
 <li class="project-card">
   <a href="#5" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/boxes-5.jpg" alt="Белая и коричневая коробки" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+  это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
       <div class="project-desc"><h2 class="project-title secondary-title" >Проект <span lang="en">Boxes</span></h2>
          <p class="project-type">Приложение </p></div></a>
         </li>
 
 <li class="project-card">
   <a href="#6" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/ihnb-6.jpg" alt="Екран компьютера" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
        <div class="project-desc"><h2 class="project-title secondary-title"><span lang="en">Inspiration has no Borders</span></h2>
           <p class="project-type">Веб-сайт </p></div></a>
         </li>
 
 <li class="project-card">
   <a href="#7" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/lim-edition-7.jpg" alt="Журнал" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
        <div class="project-desc"><h2 class="project-title  secondary-title">Издание <span lang="en">Limited Edition</span></h2>
           <p class="project-type">Дизайн </p></div></a>
         </li>
 
 <li class="project-card">
   <a href="#8" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/lab-8.jpg" alt="Бирка" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
       <div class="project-desc"><h2 class="project-title secondary-title">Проект <span lang="en">LAB</span></h2>
           <p class="project-type">Маркетинг </p></div></a>
         </li>
 
 <li class="project-card">
   <a href="#9" class="project-card-link link">
+    <div class="project-img">
     <img class="project-img" src="./images/portfolio/gr-business-9.jpg" alt="Человек печатает на ноутбуке" width="370"
   height="294">
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p>
+</div>
      <div class="project-desc">
       <h2 class="project-title secondary-title"><span lang="en">Growing Business</span></h2>
        <p class="project-type">Приложение </p></div></a>
