--- a/portfolio.html
+++ b/portfolio.html
@@ -90,10 +90,8 @@
     <div class="project-img">
     <img class="project-img" src="./images/portfolio/seafood-3.jpg" alt="Лого ресторана" width="370"
   height="294"/>
-<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
-  это позволит посетителю получить
-  исчерпывающие сведения о компании или частном лице.</p>
-</div>
+<p class="project-img-content">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+  исчерпывающие сведения о компании или частном лице.</p></div>
       <div class="project-desc"><h2 class="project-title secondary-title">Ресторан <span lang="en">Seafood</span></h2>
         <p class="project-type">Приложение </p></div></a>
       </li>
@@ -228,6 +226,7 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
 
