--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,12 +23,12 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a href="./index.html" class="logo">
+          <a href="./index.html" class="logo animate__pulse">
             <span class="web-logo">Web</span>Studio
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item current">
-              <a href="./index.html" class="nav-link link"> Студия </a>
+            <li class="nav-list-item ">
+              <a href="./index.html" class="nav-link link current"> Студия </a>
             </li>
             <li class="nav-list-item">
               <a href="./portfolio.html" class="nav-link link"> Портфолио </a>
@@ -534,8 +535,12 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal " >
-        <div class="modal-close-button-pos">
-        <button class="modal-close-button" data-modal-close>x</button>
+        <div class="modal-close-button-position">
+        <button class="modal-close-button" data-modal-close>
+          <svg width="11" height="11">
+            <use href="./images/icons/sprite.svg#close"></use>
+          </svg>
+        </button>
         </div>
       </div>
     </div>
