--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>WebStudio | Portfolio</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -16,10 +17,10 @@
     <!-- Header-->
     <div class="container">
       <nav class="navigation">
-        <a href="./index.html" class="logo"> <span class="web-logo">Web</span>Studio </a>
+        <a href="./index.html" class="logo animate__pulse"> <span class="web-logo">Web</span>Studio </a>
         <ul class="nav-list list">
           <li class="nav-list-item"><a href="./index.html" class="nav-link link"> Студия </a></li>
-          <li class="nav-list-item current"><a href="./portfolio.html" class="nav-link link"> Портфолио </a></li>
+          <li class="nav-list-item"><a href="./portfolio.html" class="nav-link link current"> Портфолио </a></li>
           <li class="nav-list-item"><a href="" class="nav-link link"> Контакты </a></li>
         </ul>
       </nav>
@@ -226,7 +227,7 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
+
 </body>
 </html>
 
