--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo animate__pulse"> <span class="web-logo">Web</span>Studio </a>
         <ul class="nav-list list">
           <li class="nav-list-item"><a href="./index.html" class="nav-link link"> Студия </a></li>
-          <li class="nav-list-item"><a href="./portfolio.html" class="nav-link link current"> Портфолио </a></li>
+          <li class="nav-list-item"><a href="./portfolio.html" class="nav-link link portfolio-current"> Портфолио </a></li>
           <li class="nav-list-item"><a href="" class="nav-link link"> Контакты </a></li>
         </ul>
       </nav>
