--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <span class="web-logo">Web</span>Studio
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item ">
-              <a href="./index.html" class="nav-link link current"> Студия </a>
+            <li class="nav-list-item "> 
+              <a href="./index.html" class="nav-link link studio-current"> Студия </a>
             </li>
             <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-link link"> Портфолио </a>
+              <a href="./portfolio.html" class="nav-link link "> Портфолио </a>
             </li>
             <li class="nav-list-item">
-              <a href="" class="nav-link link"> Контакты </a>
+              <a href="" class="nav-link link current"> Контакты </a>
             </li>
           </ul>
         </nav>
@@ -537,11 +537,12 @@
       <div class="modal " >
         <div class="modal-close-button-position">
         <button class="modal-close-button" data-modal-close>
-          <svg width="11" height="11">
+          <svg class="modal-close-button-icon" width="11" height="11">
             <use href="./images/icons/sprite.svg#close"></use>
           </svg>
         </button>
         </div>
+        <h2 class="modal-title title">Оставьте свои данные, мы вам перезвоним</h2>
       </div>
     </div>
   
